// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders a background image when avatarUrl is supplied 1`] = `
<div
  class="avatar size-xl box"
  data-testid="avatar"
  style="background-image: url(https://foo.bar/com.png); text-indent: -9999px;"
>
  HM
</div>
`;

exports[`Avatar renders initials of user email when avatarUrl is not supplied 1`] = `
<div
  class="avatar size-xl box"
  data-testid="avatar"
  style="background-color: rgb(152, 190, 47);"
>
  H
</div>
`;

exports[`Avatar renders initials of user name when avatarUrl is not supplied 1`] = `
<div
  class="avatar size-xl box"
  data-testid="avatar"
  style="background-color: rgb(152, 190, 47);"
>
  HM
</div>
`;

exports[`Avatar renders initials on custom color 1`] = `
<div
  class="avatar size-xl box"
  data-testid="avatar"
  style="background-color: red;"
>
  HM
</div>
`;
